--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 	<head>
+		<meta charset="UTF-8" />
+		<title> Game Data </title>
 	</head>
 		<body>
 			<h1>Hello word</h1>
