Adicionando e atualizando arquivos 08/05/2016 at 23:19.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,25 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title> Game Data </title>
+		<link rel="stylesheet" type="text/css" href="js/style.css">
 	</head>
 		<body>
-			<h1>Hello word</h1>
+			
+			<header id="banner">
+				<h1>Game data</h1>
+				<header id="logo"></header>
+			</header>
+			<nav>
+				<ul class="menu">
+					<li><a href="#"Home</a></li>
+					<li><a href="#"Sobre</a></li>
+					<li><a href="#"Contato</a></li>
+				</ul>
+			</nav>
+			<section id="content">
+			
+			</section>
+			<footer>
+			</footer
 		</body>
 </html>
