--- a/index.html
+++ b/index.html
@@ -5,24 +5,25 @@
 		<title> Game Data </title>
 		<link rel="stylesheet" type="text/css" href="js/style.css">
 	</head>
-		<body>
-			
-			<header id="banner">
-				<h1>Game data</h1>
-				<header id="logo"></header>
-			</header>
-			<nav>
+		<body>			
+			<header>
+				<section class="logo">
+				</section>
+				<nav>
 				<ul class="menu">
-					<li><a href="#"Home</a></li>
-					<li><a href="#"Sobre</a></li>
-					<li><a href="#"Contato</a></li>
+					<li><a href="#">Home</a></li>
+					<li><a href="#">Sobre</a></li>
+					<li><a href="#">Contato</a></li>
 				</ul>
-			</nav>
+			</nav>				
+			</header>			
 			<section id="content">
-			
+				<article>
+					<h1>Bem Vindos</h1>
+				</article>
 			</section>
 			<footer>
 			Todos os direitos reservados.
-			</footer
+			</footer>
 		</body>
 </html>
