--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title> Game Data </title>
-		<link rel="stylesheet" type="text/css" href="js/style.css">
+		<link rel="stylesheet" href="Js/style.css">
 	</head>
 		<body>			
 			<header>
