--- a/index.html
+++ b/index.html
@@ -6,24 +6,34 @@
 		<link rel="stylesheet" href="Js/style.css">
 	</head>
 		<body>			
-			<header>
+			<header id="banner">
 				<section class="logo">
-				</section>
-				<nav>
+				</section>			
+			</header>
+			<nav id="main-navbar">
 				<ul class="menu">
 					<li><a href="#">Home</a></li>
 					<li><a href="#">Sobre</a></li>
 					<li><a href="#">Contato</a></li>
 				</ul>
 			</nav>				
-			</header>			
 			<section id="content">
 				<article>
-					<h1>Bem Vindos</h1>
+					<header>
+						<hgroup>
+							<h1>Bem Vindos</h1>
+							<h3>Game Data</h3>
+						</hgroup>
+					</header>
+					<p>Em breve teremos novidades.</p>
+					<footer>
+					</footer>
 				</article>
 			</section>
+			<aside>
+			</aside>
 			<footer>
-			Todos os direitos reservados.
+			Game Data - Todos os direitos reservados &copy;.
 			</footer>
 		</body>
 </html>
